@@ -9,5 +9,4 @@ set TZData(:Asia/Dhaka) {
     {-576138600 21600 0 DACT}
     {38772000 21600 0 BDT}
     {1245430800 25200 1 BDST}
-    {1262278800 21600 0 BDT}
 }
